// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BuildComparator artifactFilters filters artifact sizes from the totals 1`] = `
Array [
  Object {
    "text": "All",
    "type": "artifact",
  },
  Object {
    "gzip": 45,
    "stat": 123,
    "type": "total",
  },
  Object {
    "gzip": 43,
    "stat": 123,
    "type": "total",
  },
  Object {
    "gzip": -2,
    "gzipPercent": -0.044444444444444446,
    "stat": 0,
    "statPercent": 0,
    "type": "totalDelta",
  },
]
`;

exports[`BuildComparator buildDeltas returns an array of deltas 1`] = `
Array [
  Object {
    "artifactDeltas": Array [],
    "deltas": Array [],
    "meta": Object {
      "revision": "1234567",
      "timestamp": 1234567,
    },
  },
  Object {
    "artifactDeltas": Array [
      Object {
        "burritos": Object {
          "gzip": 93,
          "gzipPercent": 1,
          "hashChanged": true,
          "stat": 469,
          "statPercent": 1,
          "type": "delta",
        },
        "churros": Object {
          "gzip": -90,
          "gzipPercent": -1,
          "hashChanged": true,
          "stat": -456,
          "statPercent": -1,
          "type": "delta",
        },
        "tacos": Object {
          "gzip": -2,
          "gzipPercent": -0.044444444444444446,
          "hashChanged": false,
          "stat": 0,
          "statPercent": 0,
          "type": "delta",
        },
      },
    ],
    "deltas": Array [
      Object {
        "gzip": 1,
        "gzipPercent": 0.007407407407407408,
        "stat": 13,
        "statPercent": 0.022452504317789293,
        "type": "totalDelta",
      },
    ],
    "meta": Object {
      "revision": "8901234",
      "timestamp": 8901234,
    },
  },
]
`;

exports[`BuildComparator getAscii can filter rows 1`] = `
".--------------------------------------------.
|          | 1234567 | 8901234 |     Δ0      |
|----------|---------|---------|-------------|
| burritos | 0       | 93      | 93 (100.0%) |
'--------------------------------------------'"
`;

exports[`BuildComparator getAscii does not include filtered artifacts 1`] = `
".----------------------------------------.
|       | 1234567 | 8901234 |     Δ0     |
|-------|---------|---------|------------|
| tacos | 45      | 43      | -2 (-4.4%) |
'----------------------------------------'"
`;

exports[`BuildComparator getAscii gets an ASCII table 1`] = `
".----------------------------------------------.
|          | 1234567 | 8901234 |      Δ0       |
|----------|---------|---------|---------------|
| burritos | 0       | 93      | 93 (100.0%)   |
| churros  | 90      | 0       | -90 (-100.0%) |
| tacos    | 45      | 43      | -2 (-4.4%)    |
'----------------------------------------------'"
`;

exports[`BuildComparator getCsv can filter rows 1`] = `
",1234567,8901234,Δ0
burritos,0,93,93 (100.0%)"
`;

exports[`BuildComparator getCsv does not include filtered artifacts 1`] = `
",1234567,8901234,Δ0
tacos,45,43,-2 (-4.4%)"
`;

exports[`BuildComparator getCsv gets a CSV formatted table 1`] = `
",1234567,8901234,Δ0
burritos,0,93,93 (100.0%)
churros,90,0,-90 (-100.0%)
tacos,45,43,-2 (-4.4%)"
`;

exports[`BuildComparator getSum gets a row of sums 1`] = `
Array [
  Object {
    "text": "Sum",
    "type": "text",
  },
  Object {
    "gzip": 135,
    "stat": 579,
    "type": "total",
  },
  Object {
    "gzip": 136,
    "stat": 592,
    "type": "total",
  },
  Object {
    "gzip": 1,
    "gzipPercent": 0.007407407407407408,
    "stat": 13,
    "statPercent": 0.022452504317789293,
    "type": "totalDelta",
  },
]
`;

exports[`BuildComparator matrix includes a body of all artifacts 1`] = `
Array [
  Array [
    Object {
      "text": "burritos",
      "type": "artifact",
    },
    Object {
      "gzip": 0,
      "stat": 0,
      "type": "total",
    },
    Object {
      "gzip": 93,
      "stat": 469,
      "type": "total",
    },
    Object {
      "gzip": 93,
      "gzipPercent": 1,
      "hashChanged": true,
      "stat": 469,
      "statPercent": 1,
      "type": "delta",
    },
  ],
  Array [
    Object {
      "text": "churros",
      "type": "artifact",
    },
    Object {
      "gzip": 90,
      "stat": 456,
      "type": "total",
    },
    Object {
      "gzip": 0,
      "stat": 0,
      "type": "total",
    },
    Object {
      "gzip": -90,
      "gzipPercent": -1,
      "hashChanged": true,
      "stat": -456,
      "statPercent": -1,
      "type": "delta",
    },
  ],
  Array [
    Object {
      "text": "tacos",
      "type": "artifact",
    },
    Object {
      "gzip": 45,
      "stat": 123,
      "type": "total",
    },
    Object {
      "gzip": 43,
      "stat": 123,
      "type": "total",
    },
    Object {
      "gzip": -2,
      "gzipPercent": -0.044444444444444446,
      "hashChanged": false,
      "stat": 0,
      "statPercent": 0,
      "type": "delta",
    },
  ],
]
`;

exports[`BuildComparator matrix includes a header 1`] = `
Array [
  Object {
    "text": "",
    "type": "text",
  },
  Object {
    "revision": "1234567",
    "type": "revision",
  },
  Object {
    "revision": "8901234",
    "type": "revision",
  },
  Object {
    "againstRevision": "1234567",
    "deltaIndex": 0,
    "revision": "8901234",
    "type": "revisionDelta",
  },
]
`;

exports[`BuildComparator matrix includes a total 1`] = `
Array [
  Object {
    "text": "All",
    "type": "artifact",
  },
  Object {
    "gzip": 135,
    "stat": 579,
    "type": "total",
  },
  Object {
    "gzip": 136,
    "stat": 592,
    "type": "total",
  },
  Object {
    "gzip": 1,
    "gzipPercent": 0.007407407407407408,
    "stat": 13,
    "statPercent": 0.022452504317789293,
    "type": "totalDelta",
  },
]
`;
